# bulkers

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  install.sh  test_venv_interaction.sh
.github/workflows/: build-binaries.yml  test-bulker-action.yml  test.yml
scripts/: cwl2man.py
src/: activate.rs  config.rs  crate_ops.rs  digest.rs  filelock.rs  imports.rs  main.rs  manifest.rs  manifest_cache.rs  mock.rs  process.rs  shimlink.rs  templates.rs  test_util.rs
src/commands/: activate.rs  completions.rs  envvars.rs  exec.rs  init.rs  init_shell.rs  inspect.rs  list.rs  load.rs  makemock.rs  mock.rs  mod.rs  reload.rs  run.rs  unload.rs
src/commands/config_cmd/: add.rs  get.rs  init.rs  mod.rs  remove.rs  set.rs  show.rs
src/commands/crate_cmd/: clean.rs  compare.rs  digest.rs  inspect.rs  install.rs  list.rs  mod.rs  uninstall.rs  update.rs
src/commands/env_cmd/: mod.rs
src/commands/mock_cmd/: mod.rs  record.rs  run.rs
templates/: apptainer_build.tera  apptainer_executable.tera  apptainer_shell.tera  bulker_config.yaml  bulker_config_linux.yaml  bulker_config_macos.yaml  docker_build.tera  docker_executable.tera  docker_shell.tera  mock_executable.tera  mock_recording_executable.tera  singularity_build.tera  singularity_executable.tera  singularity_shell.tera
templates/zsh_start_strict/: .zshrc
tests/: integration_test.rs
tests/e2e/: run_tests.sh  test_manifest.yaml
