[package]
name = "bulkers"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Multi-container environment manager"
repository = "https://github.com/databio/bulkers"
keywords = ["containers", "docker", "apptainer", "environment", "devtools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tera = "1"
ureq = "2"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
nix = { version = "0.29", features = ["signal", "process"] }
signal-hook = "0.3"
shell-escape = "0.1"
dirs = "6"
serde_json = "1"
tempfile = "3"

[[bin]]
name = "bulkers"
path = "src/main.rs"
